--- a/best-practices-micro/package.json
+++ b/best-practices-micro/package.json
@@ -13,10 +13,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
     "i18next": "^23.7.18",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -32,7 +28,6 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
     "sass": "^1.70.0",
-    "typescript": "^5.3.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
@@ -61,6 +56,19 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0"
+    "@craco/craco": "^7.1.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "prettier": "3.0.3",
+    "typescript": "^5.3.3",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
+    "@types/i18next": "^13.0.0",
+    "@types/react-i18next": "^8.1.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-toastify": "^4.1.0"
   }
 }
