facing problem when use usesate

--- a/best-practices-micro/.env.example
+++ b/best-practices-micro/.env.example
@@ -1,3 +1,1 @@
-VITE_API_BASE_URL=http://h3002335.stratoserver.net
-VITE_CLIENT_ID=9
-VITE_CLIENT_SECRET=p6alEPMnm2kWQaSWWZ7bRjt5pgpgLDjiR7P4UZPJ
+REACT_APP_API_BASE_URL=http://localhost/3005
