--- a/best-practices-micro/package.json
+++ b/best-practices-micro/package.json
@@ -54,6 +54,15 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "prettier": "3.0.3"
+    "prettier": "3.0.3",
+    "typescript": "^5.3.3",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
+    "@types/i18next": "^13.0.0",
+    "@types/react-i18next": "^8.1.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-toastify": "^4.1.0"
   }
 }
